[package]
name = "hotsave"
edition = "2021"
version = "0.0.0"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
config = { version = "0.14.1", features = ["toml"] }
env_logger = "0.11.5"
log = "0.4.22"
rdev = { version = "0.5.3", features = ["unstable_grab", "serialize"] }
serde = "1.0.215"
